snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.pom.md5
28b804b02dcae0adadadac12ce0b826e